Fix search bar misalignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -108,18 +108,18 @@ input[type="submit"] {
 .search-form {
     text-align: center;
     margin-bottom: 10px;
+    height: 1.75em;
 }
 
 .search-input {
-    height: 25px;
+    height: 100%;
     width: 375px;
     font-size: 14px;
     border: 1px solid #ff3b3f;
     border-right: none;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0px 5px;
 }
 
 .search-input::placeholder {
@@ -136,8 +136,9 @@ input[type="submit"] {
 }
 
 .search-submit {
-    height: 29px;
-    font-size: 16px;
+    height: 30px;
+    font-size: 14px;
+    font-weight: 700 !important;
     padding: 0;
     padding-left: 10px;
     padding-right: 10px;
@@ -344,6 +345,7 @@ input[type="submit"] {
 
 .search-input-container {
     display: inline-block;
+    height: 100%;
 }
 
 .bold {
